draft: handle not provided generated columns in FileReadingIterator, no markers